fixed YouTube scaling and menu on small-width screens

--- a/styles/output.css
+++ b/styles/output.css
@@ -627,6 +627,10 @@ video {
   display: none;
 }
 
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -659,12 +663,32 @@ video {
   width: 100%;
 }
 
+.w-5\/6 {
+  width: 83.333333%;
+}
+
+.min-w-64 {
+  min-width: 16rem;
+}
+
+.min-w-96 {
+  min-width: 24rem;
+}
+
 .max-w-screen-sm {
   max-width: 640px;
 }
 
 .max-w-screen-xl {
   max-width: 1280px;
+}
+
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
 }
 
 .list-outside {
@@ -889,11 +913,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-green-500 {
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -910,6 +929,10 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.first-line\:w-full::first-line {
+  width: 100%;
 }
 
 .visited\:text-purple-600:visited {
